--- a/frontend/public/assests/css/main.css
+++ b/frontend/public/assests/css/main.css
@@ -5,6 +5,36 @@
     margin: 0;
     outline: none;
 }
+  /* used for center the form *** */
+.form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f8f9fa; 
+  }
+  .formarea {
+    padding: 20px;
+    background-color: #fff; 
+    border-radius: 8px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    width: 100%;
+    max-width: 500px; 
+    justify-content:center;
+  }
+  
+  .login-btn {
+    background-color: #007bff; /* Button color */
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  /* end here   */
+
 .login-btn {
     background-color: rgb(95, 3, 3);
     border: 0;
